--- a/index.html
+++ b/index.html
@@ -10,45 +10,42 @@
 <body>
     <script src="app.js" defer></script>
 
-    <h1 class="display">&nbsp</h1>
 
-    <div class="btn-container">
-        <div class="numbers">
-            <button id="1">1</button>  
-            <button id="2">2</button>            
-            <button id="3">3</button>           
-            <button id="4">4</button>
-            <button id="5">5</button>
-            <button id="6">6</button>
-            <button id="7">7</button>
-            <button id="8">8</button>
-            <button id="9">9</button>      
-            <button id="0">0</button>
-        </div>
-            <!-- 
-            <button id="7">7</button>
-            <button id="8">8</button>
-            <button id="9">9</button>
-            <button id="4">4</button>
-            <button id="5">5</button>
-            <button id="6">6</button>
-            <button id="1">1</button>
-            <button id="2">2</button>
-            <button id="3">3</button>
-            <button id="0">0</button>
-            -->
-        
-        <div class="operators">
-            <button id="+">+</button>
-            <button id="-">-</button>
-            <button id="*">x</button>
-            <button id="/">/</button>
-            <button id="=">=</button>
-        </div>
+    <div class="calculator-container">
 
-        <div class="delete">
-            <button id="clear">C</button>
+        <div class="display">0</div>
+
+        <div class="delete-container">
+            <button id="clear">Clear</button>
+            <button id="backspace">Delete</button>
+        </div> 
+
+        <div class="btn-container">
+            <div class="numbers">
+                <button class="number" id="7">7</button>
+                <button class="number" id="8">8</button>
+                <button class="number" id="9">9</button>
+                <button class="number" id="4">4</button>
+                <button class="number" id="5">5</button>
+                <button class="number" id="6">6</button>
+                <button class="number" id="1">1</button>
+                <button class="number" id="2">2</button>
+                <button class="number" id="3">3</button>
+
+                <button class="float"  id=".">.</button>    
+                <button class="number" id="0">0</button>
+                <button class="operator" id="=">=</button>  
+            </div>
+
+            <div class="operators">
+                <button class="operator" id="*">x</button>
+                <button class="operator" id="/">/</button>
+                <button class="operator" id="-">-</button>
+                <button class="operator" id="+">+</button>
+            </div>
         </div>
     </div>
+
+
 </body>
 </html>
