--- a/index.html
+++ b/index.html
@@ -16,33 +16,30 @@
         <div class="display">0</div>
 
         <div class="delete-container">
-            <button id="clear">Clear</button>
-            <button id="backspace">Delete</button>
+            <button id="clear" data-key="46">Clear</button>
+            <button id="backspace" data-key="8">Delete</button>
         </div> 
 
         <div class="btn-container">
-            <div class="numbers">
-                <button class="number" id="7">7</button>
-                <button class="number" id="8">8</button>
-                <button class="number" id="9">9</button>
-                <button class="number" id="4">4</button>
-                <button class="number" id="5">5</button>
-                <button class="number" id="6">6</button>
-                <button class="number" id="1">1</button>
-                <button class="number" id="2">2</button>
-                <button class="number" id="3">3</button>
+            <button class="number" id="7" data-key="55">7</button>
+            <button class="number" id="8" data-key="56">8</button>
+            <button class="number" id="9" data-key="57">9</button>
+            <button class="operator" id="*" data-key="88">x</button>
+            
+            <button class="number" id="4" data-key="52">4</button>
+            <button class="number" id="5" data-key="53">5</button>
+            <button class="number" id="6" data-key="54">6</button>
+            <button class="operator" id="/" data-key="191">/</button>
 
-                <button class="float"  id=".">.</button>    
-                <button class="number" id="0">0</button>
-                <button class="operator" id="=">=</button>  
-            </div>
+            <button class="number" id="1" data-key="49">1</button>
+            <button class="number" id="2" data-key="50">2</button>
+            <button class="number" id="3" data-key="51">3</button>
+            <button class="operator" id="-" data-key="189">-</button>
 
-            <div class="operators">
-                <button class="operator" id="*">x</button>
-                <button class="operator" id="/">/</button>
-                <button class="operator" id="-">-</button>
-                <button class="operator" id="+">+</button>
-            </div>
+            <button class="float"  id="." data-key="190">.</button>    
+            <button class="number" id="0" data-key="48">0</button>
+            <button class="operator" id="=" data-key="13">=</button>  
+            <button class="operator" id="+" data-key="187">+</button>               
         </div>
     </div>
 
